{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 16,
  "lineage": "d011dc9e-2213-2edb-c4a6-f3c4a6ce749d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0161dfe4f7c6f34",
            "association_id": "eipassoc-0c0ef10a2cee634b8",
            "domain": "vpc",
            "id": "eipalloc-0a0161dfe4f7c6f34",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05bae749666475d7b",
            "private_dns": "ip-10-1-2-220.ap-south-1.compute.internal",
            "private_ip": "10.1.2.220",
            "public_dns": "ec2-52-66-71-1.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.71.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119138534498:internet-gateway/igw-0ac19ade451c96808",
            "id": "igw-0ac19ade451c96808",
            "owner_id": "119138534498",
            "tags": {
              "Name": "IGW for Staging VPC"
            },
            "tags_all": {
              "Name": "IGW for Staging VPC"
            },
            "vpc_id": "vpc-0aa3669e3c39ccccd"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0161dfe4f7c6f34",
            "association_id": "eipassoc-0c0ef10a2cee634b8",
            "connectivity_type": "public",
            "id": "nat-082d3757b3da1d88c",
            "network_interface_id": "eni-05bae749666475d7b",
            "private_ip": "10.1.2.220",
            "public_ip": "52.66.71.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa034b82a2bff647",
            "tags": {
              "Name": "GW for NAT"
            },
            "tags_all": {
              "Name": "GW for NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.private_sn",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119138534498:route-table/rtb-0343c848f28cb81a9",
            "id": "rtb-0343c848f28cb81a9",
            "owner_id": "119138534498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-082d3757b3da1d88c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Staging Private Route table"
            },
            "tags_all": {
              "Name": "Staging Private Route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa3669e3c39ccccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119138534498:route-table/rtb-0e965ce813b4831ac",
            "id": "rtb-0e965ce813b4831ac",
            "owner_id": "119138534498",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac19ade451c96808",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Staging Public Route table"
            },
            "tags_all": {
              "Name": "Staging Public Route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa3669e3c39ccccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119138534498:subnet/subnet-0fa034b82a2bff647",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa034b82a2bff647",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119138534498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Staging private subnet",
              "Purpose": "To delpoy the private server"
            },
            "tags_all": {
              "Name": "Staging private subnet",
              "Purpose": "To delpoy the private server"
            },
            "vpc_id": "vpc-0aa3669e3c39ccccd"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119138534498:subnet/subnet-084a80c0ea51d7a07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084a80c0ea51d7a07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "119138534498",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Staging Public Subnet",
              "Purpose": "To delpoy the Public servers"
            },
            "tags_all": {
              "Name": "Staging Public Subnet",
              "Purpose": "To delpoy the Public servers"
            },
            "vpc_id": "vpc-0aa3669e3c39ccccd"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:119138534498:vpc/vpc-0aa3669e3c39ccccd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0760374aed34476d3",
            "default_route_table_id": "rtb-0f8e2ae1608b46a3e",
            "default_security_group_id": "sg-07d05b061b3a26638",
            "dhcp_options_id": "dopt-0960931360cc4a194",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa3669e3c39ccccd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8e2ae1608b46a3e",
            "owner_id": "119138534498",
            "tags": {
              "Environmnet": "Staging",
              "Name": "Staging VPC",
              "Owner": "Charani"
            },
            "tags_all": {
              "Environmnet": "Staging",
              "Name": "Staging VPC",
              "Owner": "Charani"
            }
          }
        }
      ]
    }
  ]
}